--- a/long_read_qc/04-ONT_setup.Rmd
+++ b/long_read_qc/04-ONT_setup.Rmd
@@ -5,10 +5,10 @@ knitr::include_graphics(path = "figures/conda.png", auto_pdf = TRUE)
 
 We need to initialise the environment to use the programs we need. This needs to be done in each terminal you want to run the below commands in. Each terminal will only remember what you have told that terminal.
 
-Run the following command in a new terminal. To open a new terminal window, right click on the main screen, choose `Applications` -> `Shell` -> `bash`.
+Run the following command in a new terminal. To open a new terminal window, right click on the main screen, choose `Terminal`.
 
 ```{bash eval=FALSE}
-. usenanopack-1.1.0
+. useontqc
 ```
 
 Before carrying out any more commands we will move into the relevant directory.
