--- a/long_read_qc/packages.bib
+++ b/long_read_qc/packages.bib
@@ -3,16 +3,24 @@
   author = {{R Core Team}},
   organization = {R Foundation for Statistical Computing},
   address = {Vienna, Austria},
-  year = {2022},
+  year = {2023},
   url = {https://www.R-project.org/},
 }
 
 @Manual{R-bookdown,
   title = {bookdown: Authoring Books and Technical Documents with R Markdown},
   author = {Yihui Xie},
-  year = {2022},
-  note = {R package version 0.28},
+  year = {2023},
+  note = {R package version 0.33},
   url = {https://CRAN.R-project.org/package=bookdown},
+}
+
+@Manual{R-knitr,
+  title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
+  author = {Yihui Xie},
+  year = {2023},
+  note = {R package version 1.42},
+  url = {https://yihui.org/knitr/},
 }
 
 @Manual{R-webexercises,
@@ -32,5 +40,26 @@ webex)},
   year = {2016},
   note = {ISBN 978-1138700109},
   url = {https://bookdown.org/yihui/bookdown},
+}
+
+@Book{knitr2015,
+  title = {Dynamic Documents with {R} and knitr},
+  author = {Yihui Xie},
+  publisher = {Chapman and Hall/CRC},
+  address = {Boca Raton, Florida},
+  year = {2015},
+  edition = {2nd},
+  note = {ISBN 978-1498716963},
+  url = {https://yihui.org/knitr/},
+}
+
+@InCollection{knitr2014,
+  booktitle = {Implementing Reproducible Computational Research},
+  editor = {Victoria Stodden and Friedrich Leisch and Roger D. Peng},
+  title = {knitr: A Comprehensive Tool for Reproducible Research in {R}},
+  author = {Yihui Xie},
+  publisher = {Chapman and Hall/CRC},
+  year = {2014},
+  note = {ISBN 978-1466561595},
 }
 
