--- a/long_read_qc/14-CCS.Rmd
+++ b/long_read_qc/14-CCS.Rmd
@@ -88,9 +88,9 @@ opts_p <- c(answer="__No usable subreads__", "__Insert size too long or small__"
 ```
 1. What was the main reason for failure of CCS generation? `r longmcq(opts_p)`
 
-## RabbitQC
-```{r, fig.align = 'center',out.width= '30%', echo=FALSE }
-knitr::include_graphics(path = "figures/rabbit_qc.png", auto_pdf = TRUE)
+## RabbitQCPlus
+```{r, fig.align = 'center',out.width= '50%', echo=FALSE }
+knitr::include_graphics(path = "figures/RabbitQCPlus.png", auto_pdf = TRUE)
 ``` 
 
 Lastly, let\'s perform a quality check on the \'ccs.bam\' file to assess the lengths of the ccs reads. `SequelTools` only works with the raw subread BAM files, so we will use an alternative program - `RabbitQC.` However, this program needs a fastq file as input so we will first generate that using the `bam2fastq` tool from smrttools.
@@ -107,25 +107,24 @@ __Note__: You may see a long warning message ending with \"No such file or direc
 
 With the CCS fastq file we\'re ready to run `RabbitQC`.
 ```{bash eval=FALSE}
-rabbit_qc -i S4_ccs.fastq -D -w 1 -h S4_ccs_qc.html
+RabbitQCPlus -i S4_ccs.fastq -w 1 --TGS
 ```
 
 __Parameters__:
 
 - `-i` to specify the input fastq file name
-- `-D` to specify these are long-read data (i.e\. not Illumina)
 - `-w` to specify the number of threads
-- `-h` to specify a name for the html results file
+- `--TGS` to specifiy the data is Third Generation Sequencing data (ONT or PB)
 
-view the output using firefox.
+View the output using `firefox`.
 
 ```{bash eval=FALSE}
-firefox S4_ccs_qc.html
+firefox S4_ccs_RabbitQCPlus.html
 ```
 
 The \"Reads Length Distribution\" shows all but three ccs reads to be > 4,000bp. The majority are ~ 4.4kb. In fact the amplicon is a little longer than 4kb plus the reads contain an index sequence added during PCR to allow multiplexing of multiple samples, but this tight distribution of sizes is a good indication that the amplification and sequencing has worked well.
 
-The other plots show the % nucleotide frequencies and mean quality scores for the beginning and end of the reads. These aren\'t especially useful as such a short region is shown, but we can see the quality of the ccs reads is very high, and the main advantage of `RabbitQC` is that it is a very fast way to assess the processed read lengths.
+The other plots show the % nucleotide frequencies (AGCT) and mean quality scores for the beginning and end of the reads. The mean quality plots unfortunately do not show anything because it is such a short region. The main advantage of `RabbitQC` is that it is a very fast way to assess the processed read lengths.
 
 ## Final summary
 ```{r, fig.align = 'center',out.width= '15%', echo=FALSE }
