--- a/long_read_qc/11-PB_CLR_setup.Rmd
+++ b/long_read_qc/11-PB_CLR_setup.Rmd
@@ -3,7 +3,15 @@
 knitr::include_graphics(path = "figures/clr.png", auto_pdf = TRUE)
 ``` 
 
-Before carrying out any specific commands we will first move into the relevant directory.
+We need to initialise the environment to use the programs we need. This needs to be done in each terminal you want to run the commands from this ONT section in. Each terminal will only remember what you have told that terminal.
+
+Run the following command in a new terminal. To open a new terminal window, right click on the main screen, choose `Terminal`.
+
+```{bash eval=FALSE}
+. usepbqc
+```
+
+Before carrying out any specific commands we will move into the relevant directory.
 
 ```{bash eval=FALSE}
 cd ~/QC_workshop/PB_QC/data/CLR
